Version 2 - solved the white gap in the ned

--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -3,7 +3,9 @@
     height: auto;
 }
 .mainContainer {
-    box-shadow: 0px -50px 50px 15px rgba(0, 0, 0, 0.2);
+    -webkit-box-shadow: -3px 0px 65px 26px rgba(189,189,189,1);
+    -moz-box-shadow: -3px 0px 65px 26px rgba(189,189,189,1);
+    box-shadow: -3px 0px 65px 26px rgba(189,189,189,1);
 }
 .todoItem .delete {
     display: none;
@@ -62,6 +64,7 @@ input {
     border-bottom: 0.1px solid gainsboro;
     border-left: 0.1px solid gainsboro;
     border-right: 0.1px solid gainsboro;
+    background-color: white;
 }
 
 .taskCounter2 {
@@ -71,4 +74,9 @@ input {
     border-bottom: 0.1px solid gainsboro;
     border-left: 0.1px solid gainsboro;
     border-right: 0.1px solid gainsboro;
+    background-color: white;
+}
+
+.CounterDiv1 {
+    background-color: rgb(216, 214, 214);
 }
